--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ p {
   color: #fff;
 }
 
-#navbar h1 {
+#navbar .logo {
   float: left;
   padding-top: 20px;
 }
@@ -140,7 +140,6 @@ p {
 #showcase .showcase-content h1 {
   font-size: 60px;
   line-height: 1.2em;
-
 }
 
 #showcase .showcase-content p {
@@ -150,7 +149,7 @@ p {
 
 /* Home Info */
 #home-info {
-  height: 400px;
+  height: 450px;
 }
 
 #home-info .info-img {
@@ -207,7 +206,7 @@ p {
 
 /* Testimonials */
 #testimonials {
-  height: 600px;
+  height: 100%;
   background: url('../img/test-bg.jpg') no-repeat center center/cover;
   padding-top: 100px;
 }
